Better loggable parameter